@@ -10968,6 +10968,64 @@ name|String
 name|destIvyPattern
 parameter_list|)
 block|{
+return|return
+name|retrieve
+argument_list|(
+name|moduleId
+argument_list|,
+name|confs
+argument_list|,
+name|cache
+argument_list|,
+name|destFilePattern
+argument_list|,
+name|destIvyPattern
+argument_list|,
+name|FilterHelper
+operator|.
+name|NO_FILTER
+argument_list|)
+return|;
+block|}
+specifier|public
+name|int
+name|retrieve
+parameter_list|(
+name|ModuleId
+name|moduleId
+parameter_list|,
+name|String
+index|[]
+name|confs
+parameter_list|,
+specifier|final
+name|File
+name|cache
+parameter_list|,
+name|String
+name|destFilePattern
+parameter_list|,
+name|String
+name|destIvyPattern
+parameter_list|,
+name|Filter
+name|artifactFilter
+parameter_list|)
+block|{
+if|if
+condition|(
+name|artifactFilter
+operator|==
+literal|null
+condition|)
+block|{
+name|artifactFilter
+operator|=
+name|FilterHelper
+operator|.
+name|NO_FILTER
+expr_stmt|;
+block|}
 name|IvyContext
 operator|.
 name|getContext
@@ -11060,6 +11118,8 @@ argument_list|,
 name|destFilePattern
 argument_list|,
 name|destIvyPattern
+argument_list|,
+name|artifactFilter
 argument_list|)
 decl_stmt|;
 comment|// do retrieve
@@ -11337,6 +11397,54 @@ name|ParseException
 throws|,
 name|IOException
 block|{
+return|return
+name|determineArtifactsToCopy
+argument_list|(
+name|moduleId
+argument_list|,
+name|confs
+argument_list|,
+name|cache
+argument_list|,
+name|destFilePattern
+argument_list|,
+name|destIvyPattern
+argument_list|,
+name|FilterHelper
+operator|.
+name|NO_FILTER
+argument_list|)
+return|;
+block|}
+specifier|public
+name|Map
+name|determineArtifactsToCopy
+parameter_list|(
+name|ModuleId
+name|moduleId
+parameter_list|,
+name|String
+index|[]
+name|confs
+parameter_list|,
+specifier|final
+name|File
+name|cache
+parameter_list|,
+name|String
+name|destFilePattern
+parameter_list|,
+name|String
+name|destIvyPattern
+parameter_list|,
+name|Filter
+name|artifactFilter
+parameter_list|)
+throws|throws
+name|ParseException
+throws|,
+name|IOException
+block|{
 name|IvyContext
 operator|.
 name|getContext
@@ -11357,6 +11465,20 @@ argument_list|(
 name|cache
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|artifactFilter
+operator|==
+literal|null
+condition|)
+block|{
+name|artifactFilter
+operator|=
+name|FilterHelper
+operator|.
+name|NO_FILTER
+expr_stmt|;
+block|}
 comment|// find what we must retrieve where
 specifier|final
 name|Map
@@ -11544,6 +11666,31 @@ name|destIvyPattern
 else|:
 name|destFilePattern
 decl_stmt|;
+if|if
+condition|(
+operator|!
+literal|"ivy"
+operator|.
+name|equals
+argument_list|(
+name|artifact
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+operator|&&
+operator|!
+name|artifactFilter
+operator|.
+name|accept
+argument_list|(
+name|artifact
+argument_list|)
+condition|)
+block|{
+continue|continue;
+comment|// skip this artifact, the filter didn't accept it!
+block|}
 name|String
 name|destFileName
 init|=
