@@ -41,6 +41,34 @@ end_import
 
 begin_import
 import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|filter
+operator|.
+name|Filter
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|filter
+operator|.
+name|FilterHelper
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -105,6 +133,10 @@ name|boolean
 name|_haltOnFailure
 init|=
 literal|true
+decl_stmt|;
+specifier|private
+name|String
+name|_type
 decl_stmt|;
 specifier|public
 name|File
@@ -236,6 +268,28 @@ block|{
 name|_haltOnFailure
 operator|=
 name|haltOnFailure
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getType
+parameter_list|()
+block|{
+return|return
+name|_type
+return|;
+block|}
+specifier|public
+name|void
+name|setType
+parameter_list|(
+name|String
+name|type
+parameter_list|)
+block|{
+name|_type
+operator|=
+name|type
 expr_stmt|;
 block|}
 specifier|public
@@ -426,6 +480,17 @@ throw|;
 block|}
 try|try
 block|{
+name|Filter
+name|artifactFilter
+init|=
+name|FilterHelper
+operator|.
+name|getArtifactTypeFilter
+argument_list|(
+name|getType
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|int
 name|targetsCopied
 init|=
@@ -451,6 +516,8 @@ argument_list|,
 name|_pattern
 argument_list|,
 name|_ivypattern
+argument_list|,
+name|artifactFilter
 argument_list|)
 decl_stmt|;
 name|boolean
